objects/LocalAttribute__c.object
<CustomObject>
    <description>DECEMBER RELEASE -  This custom object is the repository for Category values.</description>
    <fields>
        <fullName>Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>DECEMBER RELEASE - Category value of a Local Attribute.</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Associations/Organizations</fullName>
                </value>
                <value>
                    <fullName>Industry Account Lifecycle</fullName>
                </value>
                <value>
                    <fullName>Associated Brands of Interest</fullName>
                </value>
                <value>
                    <fullName>Buildings Management Topics of Interest</fullName>
                </value>
                <value>
                    <fullName>Goodwill, Promo items &amp; Gifts</fullName>
                </value>
                <value>
                    <fullName>IT Room Management Topics of Interest</fullName>
                </value>
                <value>
                    <fullName>Power management Topics of Interest</fullName>
                </value>
                <value>
                    <fullName>Printed Catalogs</fullName>
                </value>
                <value>
                    <fullName>Printed Pricelists</fullName>
                </value>
                <value>
                    <fullName>Process &amp; Machines Management Topics of Interest</fullName>
                </value>
                <value>
                    <fullName>Security Management Topics of Interest</fullName>
                </value>
                <value>
                    <fullName>Surveys</fullName>
                </value>
                <value>
                    <fullName>Vertical</fullName>
                </value>
                <value>
                    <fullName>Industry</fullName>
                </value>
                <value>
                    <fullName>Specialization</fullName>
                </value>
                <value>
                    <fullName>Training Completed</fullName>
                </value>
                <value>
                    <fullName>LifeSpace Scoring Elso</fullName>
                </value>
                <value>
                    <fullName>LifeSpace Scoring Merten</fullName>
                </value>
                <value>
                    <fullName>LifeSpace Scoring Ritto</fullName>
                </value>
                <value>
                    <fullName>Order Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact</label>
        <type>Checkbox</type>
    </fields>
    <label>Local Attribute</label>
    <listViews>
        <fullName>ALL_IT_Local_Attributes</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>EUR</value>
        </filters>
        <label>ALL IT Local Attributes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>USD</value>
        </filters>
        <label>ALL IT Local Attributes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_AT</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All_AT</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_DACH</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>EUR</value>
        </filters>
        <label>All_DACH</label>
        <language>en_US</language>
        <sharedTo>
            <group>ATallUsersSEAustria</group>
            <group>CHAllUsers</group>
            <group>DE_Central_Functions_Read_Only</group>
            <group>DE_Central_Functions_Read_Write</group>
            <group>EUSDelegatedAdminGermany</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DE_LifeSpace_Scoring</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Category__c</columns>
        <columns>Contact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>Ecoreach</value>
        </filters>
        <label>DE - LifeSpace Scoring</label>
        <sharedTo>
            <group>DE_Central_Functions_Read_Only</group>
            <group>EUSDelegatedAdminGermany</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FR_ORDER_MANAGEMENT</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>Order management</value>
        </filters>
        <label>FR_ORDER MANAGEMENT</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Local Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Local Attributes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>